[package]
name = "desktop"
version = "0.1.1"
edition = "2021"
authors = ["Ray Britton <raybritton@pm.me>"]
description = "Maikor desktop app"
license = "MIT"
repository = "https://github.com/MaikorAppPublic/desktop"
readme = "README.md"
homepage = "https://maikor.app"
keywords = ["game","gamedev","2d","vm"]
categories = ["games"]

[package.metadata.bundle]
name = "Maikor"
identifer = "app.maikor"
category = "public.app-category.games"
copyright = "Copyright (c) Ray Britton 2022. All rights reserved."

[dependencies]
maikor-vm-interface = {version="0.1.8", features =["rgba"]}
maikor-platform = "0.1.27"
maikor-vm-file = "0.1.9"
pixels-graphics-lib = "0.3.1"
winit = "0.25"
winit_input_helper = "0.10"
anyhow = "1.0.57"
nanorand = "0.7.0"